--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -160,20 +160,29 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <p class="pb-3">From finding the perfect Tiffany gift to jewelry styling advice, our Client Advisors are always here to help.</p>
+              <p class="pb-3">From finding the perfect Aguri gift to jewelry styling advice, our Client Advisors are always here to help.</p>
+              <div class="d-flex">
+                <div class="accordion accordion-flush w-100" id="callus">
+                  <div class="accordion-item">
+                    <a class="accordion-header">
+                      <p class="mdt accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#call-body">
+                        Call us
+                      </p>
+                    </a>
+                    <div id="call-body" class="accordion-collapse collapse" data-bs-parent="#callus">
+                      <div class="accordion-body">
+                        <p class="smt">For general inquiries please call: 800 843 3269</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="line mb-3"></div>
               <div class="d-flex">
                 <a class="me-auto" href="#">
                   <p class="mdt">Chat Online</p>
                 </a>
                 <i class="fa-solid fa-chevron-right"></i>
-              </div>
-              <div class="line mb-3"></div>
-              <div class="d-flex">
-                <a class="me-auto" href="#">
-                  <p class="mdt">Call</p>
-                  For general inquiries please call: 800 843 3269
-                </a>
-                <i class="fa-solid fa-chevron-down"></i>
               </div>
               <div class="line mb-3"></div>
               <div class="d-flex">
