--- a/src/app/pages/tracking-order/tracking-order.component.css
+++ b/src/app/pages/tracking-order/tracking-order.component.css
@@ -2,10 +2,13 @@
 h4{
   margin-top:60px;
 }
-.bread{
+.align-cen{
   display: flex;
   justify-content: center;
-  margin-top:60px;
+  margin-top:50px;
+}
+.button-back{
+  margin-bottom:100px;
 }
 .breadcrumb{
   padding-bottom:0px;
