--- a/src/app/pages/tracking-order/tracking-order.component.html
+++ b/src/app/pages/tracking-order/tracking-order.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!--Breadcrumb-->
-<!--  <div class="bread">-->
+<!--  <div class="align-cen">-->
 <!--    <nav aria-label="breadcrumb">-->
 <!--      <ol class="breadcrumb">-->
 <!--        <li class="breadcrumb-item"><a routerLink="/home">My orders</a></li>-->
@@ -20,37 +20,41 @@
   <h6 class="mb-4">Updates:</h6>
   <div class="row">
     <div class="col-4 ps-0">
-      <p>Date</p>
+      <p class="mb-0 mdt">Date</p>
     </div>
     <div class="col-4">
-      <p>Locations</p>
+      <p class="mb-0 mdt">Locations</p>
     </div>
     <div class="col-4 pe-0">
-      <p>Event</p>
+      <p class="mb-0 text-right mdt">Event</p>
     </div>
   </div>
-  <div class="line"></div>
+  <div class="line my-3"></div>
   <div class="row">
     <div class="col-4 ps-0">
-      <p>12/11/22 - 20:00</p>
+      <p class="mb-0 smt">12/11/22 - 20:00</p>
     </div>
     <div class="col-4">
-      <p>Locations</p>
+      <p class="mb-0 smt">6901 Hollywood Blvd, LA, CA 90028, US</p>
     </div>
     <div class="col-4 pe-0">
-      <p class="text-right">Event</p>
+      <p class="decor-text text-right mb-2">Ready</p>
+      <p class="text-right smt">Waiting for carrier</p>
     </div>
   </div>
-  <div class="line"></div>
+  <div class="line my-3"></div>
   <div class="row">
     <div class="col-4 ps-0">
-      <p>12/11/22 - 16:00</p>
+      <p class="mb-0 smt">12/11/22 - 16:00</p>
     </div>
     <div class="col-4">
       <p>-</p>
     </div>
     <div class="col-4 pe-0">
-      <p class="text-right">Ordered</p>
+      <p class="decor-text text-right mb-0">Ordered</p>
     </div>
+  </div>
+  <div class="align-cen button-back">
+    <button class="btn btnlg btn-pri">Back to Order detail</button>
   </div>
 </div>
