--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -1,6 +1,6 @@
 <!--category-top-->
 <div class="category-top row pb-5">
-  <div class="col-12">
+  <div class="col-12 px-0">
     <div id="carouselTopBars" class="carousel slide" data-bs-ride="carous">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselTopBars" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
